@@ -1,3 +1,8 @@
+2004-05-19  Alan Modra  <amodra@bigpond.net.au>
+
+	* ppc-opc.c (insert_fxm): Enable two operand mfcr when -many as
+	well as when -mpower4.
+
 2004-05-13  Nick Clifton  <nickc@redhat.com>
 
 	* po/fr.po: Updated French translation.
@@ -10,7 +15,7 @@
 
 2004-05-05  Alan Modra  <amodra@bigpond.net.au>
 
-	PR 146.
+	PR 147.
 	* ppc-opc.c (PPCVEC): Remove PPC_OPCODE_PPC.
 
 2004-04-29  Ben Elliston  <bje@au.ibm.com>
